Wfprev 459 adress the height issue, only use 100vh for the parent component, hide scrollbar for the app body (#656)

--- a/client/wfprev-war/src/main/angular/src/app/components/map/map.component.scss
+++ b/client/wfprev-war/src/main/angular/src/app/components/map/map.component.scss
@@ -1,7 +1,8 @@
 .map-container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    flex:1;
+    height: calc(100vh - var(--header-height));
 }
 
 .search-filter {
@@ -10,12 +11,14 @@
     display: flex;
     align-items: center;
     border-bottom: 1px solid #A5A4A4;
+     flex-shrink: 0;
 }
 
 .content-row {
     display: flex;
     flex-grow: 1;
-  height: 100%;
+    height: 100%;
+    overflow-y: hidden;
 }
   
   
